--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve --host 0.0.0.0 --port 8000",
+        "start": "ng serve --host 0.0.0.0 --port 4200 --disable-host-check true",
         "build": "ng build --prod",
         "test": "ng test",
         "lint": "ng lint",
