--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "ng build --prod",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e"
+        "e2e": "ng e2e",
+        "extract": "ngx-translate-extract --input ./src --output ./src/assets/i18n/*.json --clean --sort --format namespaced-json"
     },
     "private": true,
     "dependencies": {
@@ -22,6 +23,8 @@
         "@angular/platform-browser-dynamic": "^5.0.0",
         "@angular/router": "^5.0.0",
         "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
+        "@ngx-translate/core": "^9.0.2",
+        "@ngx-translate/http-loader": "^2.0.1",
         "angular-particle": "^1.0.4",
         "angularfire2": "^5.0.0-rc.4",
         "bootstrap": "^4.0.0-beta.2",
