--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve --host 0.0.0.0 --port 4200 --disable-host-check true",
-        "build": "ng build --prod",
+        "build": "ng build -prod -aot --buildOptimizer",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
@@ -30,6 +30,8 @@
         "bootstrap": "^4.0.0-beta.2",
         "core-js": "^2.4.1",
         "firebase": "^4.8.0",
+        "moment-timezone": "^0.5.14",
+        "ng2-pdf-viewer": "^3.0.5",
         "ng2-toastr": "^4.1.2",
         "ngx-clipboard": "^9.0.0",
         "rxjs": "^5.5.2",
