--- a/package.json
+++ b/package.json
@@ -25,11 +25,10 @@
         "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
         "@ngx-translate/core": "^9.0.2",
         "@ngx-translate/http-loader": "^2.0.1",
-        "angular-particle": "^1.0.4",
         "angularfire2": "^5.0.0-rc.4",
         "bootstrap": "^4.0.0-beta.2",
         "core-js": "^2.4.1",
-        "firebase": "^4.8.0",
+        "firebase": "4.8.0",
         "moment-timezone": "^0.5.14",
         "ng2-pdf-viewer": "^3.0.5",
         "ng2-toastr": "^4.1.2",
