--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "ng": "ng",
         "start_uat": "ng serve --host 0.0.0.0 --port 8880 --disable-host-check true",
         "start": "ng serve --host 0.0.0.0 --port 4200 --disable-host-check true",
-        "build": "ng build -prod -aot --buildOptimizer",
+        "build": "ng build --prod --aot --buildOptimizer",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
