Final Commit all

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "license": "MIT",
     "scripts": {
         "ng": "ng",
-        "start_uat": "ng serve --host 0.0.0.0 --port 8880 --disable-host-check true",
-        "start": "ng serve --host 0.0.0.0 --port 4200 --disable-host-check true",
+        "start_uat": "ng serve --host 0.0.0.0 --port 8880 --disable-host-check true --proxy-config proxy.conf.json",
+        "start": "ng serve --host 0.0.0.0 --port 4200 --disable-host-check true --proxy-config proxy.conf.json",
         "build": "ng build --prod --aot --buildOptimizer",
         "test": "ng test",
         "lint": "ng lint",
@@ -27,10 +27,12 @@
         "@ngx-translate/core": "^9.0.2",
         "@ngx-translate/http-loader": "^2.0.1",
         "angularfire2": "^5.0.0-rc.4",
+        "aws-sdk": "^2.176.0",
         "bootstrap": "^4.0.0-beta.2",
         "core-js": "^2.4.1",
         "firebase": "4.8.0",
         "moment-timezone": "^0.5.14",
+        "ng-recaptcha": "^3.0.3",
         "ng2-pdf-viewer": "^3.0.5",
         "ng2-toastr": "^4.1.2",
         "ngx-clipboard": "^9.0.0",
@@ -54,6 +56,7 @@
         "karma-jasmine": "~1.1.0",
         "karma-jasmine-html-reporter": "^0.2.2",
         "protractor": "~5.1.2",
+        "source-map-explorer": "^1.5.0",
         "ts-node": "~3.2.0",
         "tslint": "~5.7.0",
         "typescript": "~2.4.2"
